syntax = "proto3";

package gamebox.v1;

import "game/v1/game.proto";

option go_package = "github.com/tobyrushton/globalfront/pb/gamebox/v1";

service Gamebox {
    rpc CreateGame(CreateGameRequest) returns (CreateGameResponse);
}

message CreateGameRequest {
    game.v1.Game game = 1;
}

message CreateGameResponse {
    string game_id = 1;
    int32 port = 2;
}